fix demos page on mobile

--- a/src/components/demo/demo-list/demo-list.module.scss
+++ b/src/components/demo/demo-list/demo-list.module.scss
@@ -1,5 +1,14 @@
+@import "../../../variables.scss";
+
 .gridContainer {
   display: grid;
   grid-template-columns: auto auto;
   justify-content: space-around;
+}
+
+@media only screen and (max-width: 900px) {
+  .gridContainer {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
