--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: $mobile-breakpoint) {
   .container {
     align-items: center;
     flex-direction: column;
@@ -58,7 +58,7 @@
   transition: background-color 0.2s ease;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: $mobile-breakpoint) {
   .navLinkContainer {
     display: grid;
     grid-template-columns: auto auto;
