--- a/src/components/reading-list-page/reading-listing/reading-listing.module.scss
+++ b/src/components/reading-list-page/reading-listing/reading-listing.module.scss
@@ -28,7 +28,7 @@ $imageWidth: 128px;
   margin-right: 10px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: $mobile-breakpoint) {
   .imageContainer {
     display: none;
   }
