--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,3 +13,5 @@ $primary-text: #fff;
 $primary-light-text: #000;
 $primary-dark-text: #fff;
 $accent-text: #fff;
+
+$mobile-breakpoint: 800px;
